# easyvocabook

./: .gitignore  README.md  badge.json  coverage.json
.github/workflows/: build-test.yaml  release.yaml
android/: badge.json  jacocoTestReport.xml
android/html/: index.html  jacoco-sessions.html
android/html/tw.idv.woofdog.easyvocabook.data.db/: DbTableBase$DefaultImpls.html  DbTableBase.html  DbTableBase.kt.html  DbTableMemory$loadAll$2.html  DbTableMemory.html  DbTableMemory.kt.html  DbTableSQLite$Companion.html  DbTableSQLite$clearPracticeStats$2.html  DbTableSQLite$createWord$2.html  DbTableSQLite$deleteWord$2.html  DbTableSQLite$getBookInfo$2.html  DbTableSQLite$getWord$2.html  DbTableSQLite$listWords$2.html  DbTableSQLite$updateBookInfo$2.html  DbTableSQLite$updatePracticeStats$2.html  DbTableSQLite$updateWord$2.html  DbTableSQLite.html  index.html  (+2 more)
doc/: schema.md
doc/explore/: 202606280012-rust-desktop.md  202607062225-android-kotlin.md
doc/icons/: Readme.txt  icons.pptx
html/: index.html
kotlin/: build.gradle.kts  gradle.properties  settings.gradle.kts
kotlin/app/: build.gradle.kts  proguard-rules.pro
openspec/: config.yaml
rust/: Cargo.toml  build.rs
rust/src/: main.rs
rust/src/config/: keychain.rs  mod.rs
rust/src/db/: labels.rs  memory.rs  mod.rs  schema.rs  sqlite.rs  types.rs
rust/src/locale/: mod.rs
rust/src/network/: drive.rs  ftp.rs  mod.rs  oauth.rs  onedrive.rs  sftp.rs  sync.rs
rust/src/quiz/: engine.rs  mod.rs  sampler.rs
rust/src/ui/: mod.rs  quiz.rs  settings.rs  word_edit.rs  word_list.rs
tools/: setup-dev-env.sh
(+243 files in other folders)
