[package]
name = "easyvocabook"
version = "0.1.0"
edition = "2024"

[build-dependencies]
aes = "0.8"
cbc = "0.1"
rand = "0.8"

[dependencies]
aes = "0.8"
cbc = "0.1"
dirs = "6.0.0"
iced = { version = "0.14.0", features = ["tokio"] }
image = { version = "0.25.10", default-features = false, features = ["png"] }
keyring = "4.1.2"
oauth2 = "5.0.0"
reqwest = { version = "0.13.4", default-features = false, features = [
    "json",
    "form",
    "multipart",
    "query",
    "rustls",
] }
rusqlite = { version = "0.40.1", features = ["bundled"] }
russh = "0.62.1"
russh-sftp = "2.3.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
suppaftp = { version = "10.0.0", features = ["tokio-rustls-ring"] }
tokio = { version = "1.52.3", features = ["full"] }
toml = "1.1.2"
webbrowser = "1.2.1"

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
strip = true

[dev-dependencies]
tempfile = "3.27.0"
